deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: animeima-ui-service
  namespace: animeima
  labels:
    app: animeima-ui
spec:
  selector:
    app: animeima-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
