deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animeima-ui-ingress
  namespace: animeima
  labels:
    app: animeima-ui
  annotations:
    description: animeima-ui ingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.animeima.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: animeima-ui-service
            port:
              number: 80
